pfctl: rule.label is a two-dimensional array

Fix checking for a non-empty first string.

PR:		269075
MFC after:	1 week
Reported by:	nreilly@blackberry.com

(cherry picked from commit cd80c52cade3e38d273eecec6f9b0a7cba23bcc8)